Fix responsive on small screens + support for noscript

--- a/css/about.scss
+++ b/css/about.scss
@@ -1,26 +1,29 @@
 ---
 ---
 
-html[data-theme='dark'] .content img {
-  border: 2px solid var(--color-foreground);
-}
+.content {
+  & img {
+    background-clip: padding-box;
+    border: 2px solid var(--color-foreground);
+  }
 
-.profiles {
-  margin: 10px 0;
-  height: 25px;
+  & .profiles {
+    margin: 10px 0;
+    height: 25px;
 
-  & a {
-    margin-right: 10px;
+    & a {
+      margin-right: 10px;
 
-    &:last-child {
-      margin-right: 0;
-    }
+      &:last-child {
+        margin-right: 0;
+      }
 
-    & svg {
-      height: 100%;
+      & svg {
+        height: 100%;
 
-      & > path {
-        fill: var(--color-foreground);
+        & > path {
+          fill: var(--color-foreground);
+        }
       }
     }
   }
