--- a/css/default.scss
+++ b/css/default.scss
@@ -11,9 +11,21 @@ div.container {
   width: 700px;
 }
 
+.small {
+  display: none;
+}
+
 @media (max-width: 800px) {
   div.container {
     margin: 0 20px;
+  }
+
+  .small {
+    display: unset;
+  }
+
+  .big {
+    display: none;
   }
 }
 
@@ -23,6 +35,7 @@ div.container {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex: 0 0 auto;
 
   &__home {
     height: 100%;
