--- a/css/index.scss
+++ b/css/index.scss
@@ -4,14 +4,23 @@
 .name {
   margin-top: 10rem;
 
-  & svg path {
-    animation: 2s ease forwards writeIn;
-    stroke-width: 0.75;
-    stroke-linecap: round;
-    stroke: var(--color-foreground);
-    fill: var(--color-foreground);
-    fill-opacity: 0;
-    display: none;
+  & svg {
+    & path {
+      stroke-width: 0.75;
+      stroke-linecap: round;
+      stroke: var(--color-foreground);
+      fill: var(--color-foreground);
+    }
+
+    &.animated {
+      display: none;
+
+      & path {
+        animation: 2s ease forwards writeIn;
+        fill-opacity: 0;
+        display: none;
+      }
+    }
   }
 
   & h2 {
